--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 三岳のBlog
 subtitle: 怕什么真理无穷，进一寸有进一寸的欢喜。
-description: 一个记录自己学习、成长的地方！
+description: 一个记录自己学习、成长的地方=.=
 keywords: 
 author: 三岳
 language: 
