--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,9 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GH_TOKEN
-  keep-history: false
+  keep-history: true
   on:
     branch: master
-  local-dir: public
-  target_branch: master
 notifications:
 email:
   - sanyuedev@gmail.com
